# Event_Camera_Mobility

./: .gitignore  README_EN.md  README_FR.md  capitalisation.txt  code_1  scf€  usefull notes
Capitalisation/: amelioration_code_ros1.md  report.tex
Rapport/: Indications.txt  problèmes rencontrés
Rapport/Projet_latex/: 1_Page_Garde.tex  Bibliography.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lot  main.out  main.tex  main.toc  rapportENSIAS.cls
Rapport/Projet_latex/Chapter/: Chapter 1.tex  Chapter 2.tex  Chapter 3.tex  chap1_materiel_fondements.tex  chap2_methodologie.tex  chap4_tests_resultats.tex
Rapport/Projet_latex/plan/: 2_Dedications.tex  4_Abstract.tex  5_Abbreviations.tex  6_General_introduction.tex  7_General_Conclusion.tex
Rapport/template_rapport_ensias/: main.tex  rapportENSIAS.cls
install/: local_setup.sh  setup.sh
install/datasync_3_0/share/datasync_3_0/: package.bash  package.zsh
install/datasync_4_0/share/datasync_4_0/: package.bash  package.zsh
log/: latest_build
package_motion_compensation_ROS1/Jhonny-Li-Motion-compensation-f6ae84b/datasync_ros1/launch/: motion_compensation.launch
package_motion_compensation_ROS1/Jhonny-Li-Motion-compensation-f6ae84b/datasync_ros1/src/: Motion_Compensation_commented.cpp
project_ws/: commandes.md
project_ws/Capitalisation/Notes/: col_build.md  valeurs params tests.txt
project_ws/docker_ros1/: memento_docker.md
project_ws/rosbag2_2026_01_06-15_25_58/: metadata.yaml
project_ws/rosbag2_2026_01_06-15_40_11/: metadata.yaml
project_ws/rosbag2_2026_02_11-17_44_25/: metadata.yaml
project_ws/rosbag2_2026_02_13-16_03_38/: metadata.yaml  notes.txt
project_ws/rosbag2_2026_02_20-15_17_34/: Untitled Document 1  metadata.yaml
project_ws/rosbag2_2026_02_20-15_49_12/: metadata.yaml
project_ws/rosbag2_2026_02_20-16_01_00/: metadata.yaml
project_ws/rosbag2_2026_02_21-13_16_40/: metadata.yaml
project_ws/src/bringup/: package.xml  setup.cfg  setup.py
project_ws/src/bringup/launch/: bringup.launch.py
project_ws/src/datasync/: CMakeLists.txt  package.xml
project_ws/src/datasync/src/: Motion_Compensation.cpp
project_ws/src/datasync_2_0/event_clustering/: package.xml  setup.py
project_ws/src/datasync_2_0/event_clustering/config/: clustering.yaml
project_ws/src/datasync_2_0/event_clustering/event_clustering/: backup.py  clustering_node.py
project_ws/src/datasync_2_0/event_clustering/launch/: clustering.launch.py
project_ws/src/datasync_2_0/event_segmentation/config/: segmentation.yaml
project_ws/src/datasync_2_0/event_segmentation/event_segmentation/: segmentation_node.py
project_ws/src/datasync_3_0/: CMakeLists.txt  package.xml
project_ws/src/datasync_3_0/config/: motion_compensation.yaml  motion_compensation_davis240.yaml
project_ws/src/datasync_3_0/include/datasync_3_0/: event_visualizer.hpp  event_visualizer_commented.hpp
project_ws/src/datasync_3_0/launch/: motion_compensation.launch.py
project_ws/src/datasync_3_0/scripts/: automate_ab_bag_campaign.py  check_imu_event_lag.py  extract_pipeline_metrics.py  filter_sweep_ideal.py  filter_sweep_ideal_latest.csv  filter_sweep_metrics.py  manifest_to_latex_plots.py
project_ws/src/datasync_3_0/src/: EventVisualizer.cpp  Motion_Compensation.cpp  Motion_Compensation_commented.cpp  main.cpp
project_ws/src/datasync_4_0/: CMakeLists.txt  package.xml
project_ws/src/datasync_4_0/config/: motion_compensation.yaml  motion_compensation_davis240.yaml
project_ws/src/datasync_4_0/include/datasync_4_0/: event_visualizer.hpp  event_visualizer_commented.hpp
project_ws/src/datasync_4_0/launch/: motion_compensation.launch.py
project_ws/src/datasync_4_0/scripts/: check_imu_event_lag.py
project_ws/src/datasync_4_0/src/: EventVisualizer.cpp  Motion_Compensation_commented.cpp  main.cpp
project_ws/src/dvs_to_dv_bridge/: CMakeLists.txt  package.xml
project_ws/src/dvs_to_dv_bridge/launch/: bridge.launch.py
project_ws/src/dvs_to_dv_bridge/src/: dvs_to_dv_bridge.cpp
project_ws/src/event_clustering_2_0/: package.xml  setup.cfg  setup.py
project_ws/src/event_clustering_2_0/config/: clustering_2_0.yaml
project_ws/src/event_clustering_2_0/event_clustering_2_0/: clustering_2_0_node.py
project_ws/src/event_clustering_2_0/launch/: clustering_2_0.launch.py
project_ws/src/event_clustering_2_0/resource/: event_clustering_2_0
project_ws/src/event_denoise/: package.xml  setup.cfg  setup.py
project_ws/src/event_denoise/config/: denoise.yaml
project_ws/src/event_denoise/event_denoise/: denoise_node.py
project_ws/src/event_denoise/launch/: denoise.launch.py
project_ws/src/event_hot_pixel_mask/: package.xml  setup.cfg  setup.py
project_ws/src/event_hot_pixel_mask/config/: hot_pixel_mask.yaml
project_ws/src/event_hot_pixel_mask/event_hot_pixel_mask/: hot_pixel_mask_node.py
project_ws/src/event_hot_pixel_mask/launch/: hot_pixel_mask.launch.py
project_ws/src/event_nav2_layer/: CMakeLists.txt  event_nav2_layer.xml  package.xml
project_ws/src/event_nav2_layer/config/: event_nav2_layer.yaml
project_ws/src/event_nav2_layer/include/event_nav2_layer/: event_nav2_layer.hpp
project_ws/src/event_nav2_layer/launch/: event_nav2_layer.launch.py
project_ws/src/event_nav2_layer/src/: event_nav2_layer.cpp
project_ws/src/event_rate_filter/: package.xml  setup.cfg  setup.py
project_ws/src/event_rate_filter/config/: rate_filter.yaml
project_ws/src/event_rate_filter/event_rate_filter/: rate_filter_node.py
project_ws/src/event_rate_filter/launch/: rate_filter.launch.py
project_ws/src/event_segmentation/: package.xml  setup.cfg  setup.py
project_ws/src/event_segmentation/config/: segmentation.yaml
project_ws/src/event_segmentation/event_segmentation/: segmentation_node.py
project_ws/src/event_segmentation/launch/: segmentation.launch.py
