<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Launch package for the event pipeline.</description>
  <maintainer email="nochi@todo.todo">nochi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>datasync_3_0</exec_depend>
  <exec_depend>event_segmentation</exec_depend>
  <exec_depend>event_clustering_2_0</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
