<?xml version="1.0"?>
<package format="3">
  <name>datasync_4_0</name>
  <version>0.0.1</version>
  <description>ROS2 motion compensation using events, depth, and odometry.</description>
  <maintainer email="nochi@example.com">nochi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dv_ros2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
