<?xml version="1.0"?>
<package format="3">
  <name>dvs_to_dv_bridge</name>
  <version>0.0.1</version>
  <description>Bridge from dvs_msgs/EventArray to dv_ros2_msgs/EventArray.</description>
  <maintainer email="nochi@example.com">nochi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dvs_msgs</depend>
  <depend>dv_ros2_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
