<?xml version="1.0"?>
<package format="3">
  <name>event_segmentation</name>
  <version>0.0.0</version>
  <description>Event-based foreground/background segmentation.</description>
  <maintainer email="nochi@todo.todo">nochi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
